# maple-prob-scraper

./: .gitignore  pyproject.toml
maple_prob_scraper/: __init__.py  main.py  request.py
maple_prob_scraper/app/: cube.py
maple_prob_scraper/converter/: cube.py
maple_prob_scraper/cube/: cube_grade.py  request.py
maple_prob_scraper/resource/: cube.py
maple_prob_scraper/type/: cube_detail.py
tests/: test_cube.py
