[tool.poetry]
name = "maple-prob-scraper"
version = "0.1.0"
description = ""
authors = ["Lechros <0onionion0@gmail.com>"]
readme = "README.md"
packages = [{include = "maple_prob_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
