[tool.poetry]
name = "maple-prob-scraper"
version = "0.1.0"
description = ""
authors = ["Lechros <0onionion0@gmail.com>"]
readme = "README.md"
packages = [{include = "maple_prob_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
bs4 = "^0.0.1"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
